Update luncher options